
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_4__ ;
typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


typedef int u8 ;
struct TYPE_7__ {int crc_verify; int op; int ref_tag_chk; int app_f_detect; int app_ref_f_detect; } ;
struct scu_task_context {int block_guard_enable; int blk_prot_en; int blk_sz; int blk_prot_func; int ref_tag_seed_verify; int DIF_bytes_immed_val; scalar_t__ ref_tag_seed_gen; scalar_t__ reserved_E8_0; scalar_t__ blk_guard_err; scalar_t__ app_tag_verify_mask; TYPE_3__ bgctl_f; scalar_t__ bgctl; scalar_t__ app_tag_gen_mask; scalar_t__ reserved_E0_0; int bgc_blk_sz; scalar_t__ reserved_DC_1; scalar_t__ reserved_DC_0; int UD_bytes_immed_val; scalar_t__ app_tag_gen; scalar_t__ app_tag_verify; scalar_t__ init_crc_seed; scalar_t__ interm_crc_val; int transfer_length_bytes; } ;
struct scsi_cmnd {TYPE_4__* device; } ;
struct TYPE_6__ {TYPE_1__* io_task_ptr; } ;
struct isci_request {TYPE_2__ ttype_ptr; struct scu_task_context* tc; } ;
struct TYPE_8__ {int sector_size; } ;
struct TYPE_5__ {struct scsi_cmnd* uldd_task; } ;


 int SCSI_PROT_DIF_TYPE1 ;
 int SCSI_PROT_DIF_TYPE2 ;
 int SCSI_PROT_DIF_TYPE3 ;
 int scsi_get_lba (struct scsi_cmnd*) ;
 int scu_bg_blk_size (TYPE_4__*) ;
 scalar_t__ scu_dif_bytes (int ,int ) ;

__attribute__((used)) static void scu_ssp_ireq_dif_strip(struct isci_request *ireq, u8 type, u8 op)
{
 struct scu_task_context *tc = ireq->tc;
 struct scsi_cmnd *scmd = ireq->ttype_ptr.io_task_ptr->uldd_task;
 u8 blk_sz = scu_bg_blk_size(scmd->device);

 tc->block_guard_enable = 1;
 tc->blk_prot_en = 1;
 tc->blk_sz = blk_sz;

 tc->blk_prot_func = 0x1;

 tc->transfer_length_bytes += scu_dif_bytes(tc->transfer_length_bytes,
         scmd->device->sector_size);


 tc->interm_crc_val = 0;

 tc->init_crc_seed = 0;
 tc->app_tag_verify = 0;
 tc->app_tag_gen = 0;

 if ((type & SCSI_PROT_DIF_TYPE1) || (type & SCSI_PROT_DIF_TYPE2))
  tc->ref_tag_seed_verify = scsi_get_lba(scmd) & 0xffffffff;
 else if (type & SCSI_PROT_DIF_TYPE3)
  tc->ref_tag_seed_verify = 0;


 tc->UD_bytes_immed_val = scmd->device->sector_size;

 tc->reserved_DC_0 = 0;


 tc->DIF_bytes_immed_val = 8;

 tc->reserved_DC_1 = 0;
 tc->bgc_blk_sz = scmd->device->sector_size;
 tc->reserved_E0_0 = 0;
 tc->app_tag_gen_mask = 0;


 tc->bgctl = 0;


 tc->bgctl_f.crc_verify = 1;
 tc->bgctl_f.op = 0x1;
 if ((type & SCSI_PROT_DIF_TYPE1) || (type & SCSI_PROT_DIF_TYPE2)) {
  tc->bgctl_f.ref_tag_chk = 1;
  tc->bgctl_f.app_f_detect = 1;
 } else if (type & SCSI_PROT_DIF_TYPE3)
  tc->bgctl_f.app_ref_f_detect = 1;

 tc->app_tag_verify_mask = 0;


 tc->blk_guard_err = 0;

 tc->reserved_E8_0 = 0;
 tc->ref_tag_seed_gen = 0;
}
